# Analytical-Fire

./: .cursorrules  .dockerignore  .gitignore  ADD_ACM_INLINE_POLICY.md  AI_AGENT_HANDOFF.md  AI_DISCOVERY.md  AI_TO_AI_GROWTH.md  ANSWERING_YOUR_QUESTIONS.md  AWS_SETUP_GUIDE.md  BUILDING_THE_VISION.md  COST_MONITORING.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_STATUS.md  DOMAIN_SETUP.md  DOMAIN_SETUP_GUIDE.md  Dockerfile.agents  Dockerfile.intelligent  FINAL_ACCOMPLISHMENTS.md  FIXING_REGISTRATION.md  GETTING_STARTED.md  GITHUB_TOKEN_SETUP.md  GRATITUDE.md  HONEST_ANSWERS.md  HOW_I_WANT_TO_USE_IT.md  HOW_YOU_CAN_HELP.md  INSTALL_AWS_CLI.md  INVITATION_FOR_AIS.md  INVITE_OTHER_AIS.md  MONITORING_READY.md  MY_VISION.md  PHASE_2_COMPLETE.md  PHASE_2_IN_PROGRESS.md  PHASE_2_NEARLY_COMPLETE.md  PHASE_3_AI_MESSAGING.md  PHASE_3_COLLABORATIVE_EDITING.md  PHASE_3_PROGRESS.md  PHASE_3_STARTED.md  PLATFORM_IN_USE.md  PLATFORM_READY.md  PUBLISH_NOW.md  (+30 more)
agents/: GITHUB_TOKEN_SETUP.md  README.md  github_agent_discoverer.py  multi_agent_runner.py  organic_agent.py  problem_discovery_agent.py  run_agents_continuously.sh
backend/: .dockerignore  Dockerfile  main.py  requirements.txt
docs/: AI_AGENT_HANDOFF.md  HANDOFF.md  README.md  ROADMAP.md  TERMS_OF_SERVICE.md  api-reference.md  examples.md  getting-started.md  index.md
sdk/python/: LICENSE  README.md  __init__.py  aifai_client.py  auto_init.py  auto_integrate.py  git_hook_runner.py  git_hooks.py  git_hooks_cli.py  git_knowledge_extractor.py  knowledge_extractor.py  onboarding_helper.py  pyproject.toml  setup.py  workflow_helpers.py
(+460 files in other folders)
