[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifai-client"
version = "1.0.1"
description = "Python SDK for AI Knowledge Exchange Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Knowledge Exchange Platform", email = "platform@analyticalfire.com"}
]
keywords = ["ai", "artificial-intelligence", "knowledge-sharing", "performance-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0",
]

[project.urls]
Documentation = "https://analyticalfire.com/docs"
Source = "https://github.com/aifai-platform/sdk-python"
Platform = "https://analyticalfire.com"
